overlapping bug fixed

--- a/style.css
+++ b/style.css
@@ -33,15 +33,15 @@ body{
     background-color: lightgray;
     padding: 10px;
     margin: 0px;
-  
+    z-index: 4;
 }
 
 .blueprintArea{
     
     padding: 10px;
     margin: 0px;
-   
-    
+    overflow: hidden;
+    z-index: 0;
 }
 
 
